Move Error Prone configuration into a profile so that we can skip Error Prone under Java 8.
That will unblock [upgrading Error Prone](https://github.com/google/jimfs/pull/218).

Compare [the Error Prone configuration in Guava](https://github.com/google/guava/blob/c06a6341da03b59dc8a6e97c0b8ccaae7d8b284e/pom.xml#L493).

RELNOTES=n/a
PiperOrigin-RevId: 513670973